// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders component with default provider 1`] = `
<RUIProvider
  globalProps={null}
  translations={
    Object {
      "Alert": Object {
        "close": "Close",
      },
      "Modal": Object {
        "close": "Close",
      },
      "ScrollView": Object {
        "next": "Next",
        "previous": "Previous",
      },
    }
  }
>
  <WithProviderContextComponent
    closeHandler={[Function]}
    title="Modal"
  >
    <Modal
      actions={Array []}
      autoFocus={true}
      closeHandler={[Function]}
      portalId={null}
      position="center"
      scrollView={
        <WithProviderContextComponent
          customEndShadowStyle={
            Object {
              "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            }
          }
          customStartShadowStyle={
            Object {
              "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            }
          }
          shadowSize="16px"
        />
      }
      size="medium"
      title="Modal"
      translations={
        Object {
          "close": "Close",
        }
      }
    >
      <div
        className="overlay"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="root isRootSizeMedium isRootPositionCenter"
          onClick={[Function]}
          role="presentation"
        >
          <div
            className="head"
          >
            <h3
              className="headTitle"
            >
              Modal
            </h3>
            <button
              className="close"
              onClick={[Function]}
              title="Close"
              type="button"
            >
              ×
            </button>
          </div>
          <div
            className="body isBodyScrollable"
          >
            <WithProviderContextComponent
              customEndShadowStyle={
                Object {
                  "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                }
              }
              customStartShadowStyle={
                Object {
                  "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                }
              }
              shadowSize="16px"
            >
              <ScrollView
                arrows={false}
                arrowsScrollStep={200}
                autoScroll="off"
                customEndShadowStyle={
                  Object {
                    "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                  }
                }
                customNextArrow={null}
                customPrevArrow={null}
                customStartShadowStyle={
                  Object {
                    "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                  }
                }
                debounce={50}
                direction="vertical"
                scrollbar={true}
                shadowColor={
                  Object {
                    "alpha": 1,
                    "blue": 255,
                    "green": 255,
                    "red": 255,
                  }
                }
                shadowSize="16px"
                translations={
                  Object {
                    "next": "Next",
                    "previous": "Previous",
                  }
                }
              >
                <div
                  className="root    isRootVertical"
                  style={
                    Object {
                      "--rui-local-arrow-color": "inherit",
                      "--rui-local-end-shadow-background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                      "--rui-local-end-shadow-box-shadow": "none",
                      "--rui-local-shadow-height": "16px",
                      "--rui-local-shadow-width": "auto",
                      "--rui-local-start-shadow-background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                      "--rui-local-start-shadow-box-shadow": "none",
                    }
                  }
                >
                  <div
                    className="viewport"
                  >
                    <div
                      className="content"
                    >
                      <div
                        className="content"
                      >
                        Modal content
                      </div>
                    </div>
                  </div>
                  <div
                    aria-hidden={true}
                    className="scrollingShadows"
                  />
                </div>
              </ScrollView>
            </WithProviderContextComponent>
          </div>
          <div
            className="footer"
          >
            <WithProviderContextComponent
              dense={true}
              justify="center"
            >
              <Toolbar
                align="top"
                dense={true}
                justify="center"
                nowrap={false}
              >
                <div
                  className="toolbar isDense  isAlignedToTop isJustifiedToCenter"
                >
                  <WithProviderContextComponent>
                    <ToolbarItem>
                      <div
                        className="item"
                      >
                        <ForwardRef(withForwardedRef(WithProviderContextComponent))
                          clickHandler={[Function]}
                          label="Close"
                          priority="flat"
                        >
                          <WithProviderContextComponent
                            clickHandler={[Function]}
                            forwardedRef={null}
                            label="Close"
                            priority="flat"
                          >
                            <Button
                              afterLabel={null}
                              beforeLabel={null}
                              block={false}
                              clickHandler={[Function]}
                              disabled={false}
                              endCorner={null}
                              forwardedRef={null}
                              grouped={false}
                              label="Close"
                              labelVisibility="all"
                              loadingIcon={null}
                              priority="flat"
                              size="medium"
                              startCorner={null}
                              type="button"
                              variant="primary"
                            >
                              <button
                                className="root
        priorityFlat
        sizeMedium
        variantPrimary"
                                disabled={false}
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="label"
                                >
                                  Close
                                </span>
                              </button>
                            </Button>
                          </WithProviderContextComponent>
                        </ForwardRef(withForwardedRef(WithProviderContextComponent))>
                      </div>
                    </ToolbarItem>
                  </WithProviderContextComponent>
                </div>
              </Toolbar>
            </WithProviderContextComponent>
          </div>
        </div>
      </div>
    </Modal>
  </WithProviderContextComponent>
</RUIProvider>
`;

exports[`rendering renders component with provided both translations and global props 1`] = `
<RUIProvider
  globalProps={
    Object {
      "Modal": Object {
        "size": "fullscreen",
      },
    }
  }
  translations={
    Object {
      "Modal": Object {
        "close": "Zavřít",
      },
      "ScrollView": Object {
        "next": "Další",
        "previous": "Předchozí",
      },
    }
  }
>
  <WithProviderContextComponent
    closeHandler={[Function]}
    title="Modal"
  >
    <Modal
      actions={Array []}
      autoFocus={true}
      closeHandler={[Function]}
      portalId={null}
      position="center"
      scrollView={
        <WithProviderContextComponent
          customEndShadowStyle={
            Object {
              "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            }
          }
          customStartShadowStyle={
            Object {
              "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            }
          }
          shadowSize="16px"
        />
      }
      size="fullscreen"
      title="Modal"
      translations={
        Object {
          "close": "Zavřít",
        }
      }
    >
      <div
        className="overlay"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="root isRootSizeFullscreen isRootPositionCenter"
          onClick={[Function]}
          role="presentation"
        >
          <div
            className="head"
          >
            <h3
              className="headTitle"
            >
              Modal
            </h3>
            <button
              className="close"
              onClick={[Function]}
              title="Zavřít"
              type="button"
            >
              ×
            </button>
          </div>
          <div
            className="body isBodyScrollable"
          >
            <WithProviderContextComponent
              customEndShadowStyle={
                Object {
                  "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                }
              }
              customStartShadowStyle={
                Object {
                  "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                }
              }
              shadowSize="16px"
            >
              <ScrollView
                arrows={false}
                arrowsScrollStep={200}
                autoScroll="off"
                customEndShadowStyle={
                  Object {
                    "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                  }
                }
                customNextArrow={null}
                customPrevArrow={null}
                customStartShadowStyle={
                  Object {
                    "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                  }
                }
                debounce={50}
                direction="vertical"
                scrollbar={true}
                shadowColor={
                  Object {
                    "alpha": 1,
                    "blue": 255,
                    "green": 255,
                    "red": 255,
                  }
                }
                shadowSize="16px"
                translations={
                  Object {
                    "next": "Další",
                    "previous": "Předchozí",
                  }
                }
              >
                <div
                  className="root    isRootVertical"
                  style={
                    Object {
                      "--rui-local-arrow-color": "inherit",
                      "--rui-local-end-shadow-background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                      "--rui-local-end-shadow-box-shadow": "none",
                      "--rui-local-shadow-height": "16px",
                      "--rui-local-shadow-width": "auto",
                      "--rui-local-start-shadow-background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                      "--rui-local-start-shadow-box-shadow": "none",
                    }
                  }
                >
                  <div
                    className="viewport"
                  >
                    <div
                      className="content"
                    >
                      <div
                        className="content"
                      >
                        Modal content
                      </div>
                    </div>
                  </div>
                  <div
                    aria-hidden={true}
                    className="scrollingShadows"
                  />
                </div>
              </ScrollView>
            </WithProviderContextComponent>
          </div>
          <div
            className="footer"
          >
            <WithProviderContextComponent
              dense={true}
              justify="center"
            >
              <Toolbar
                align="top"
                dense={true}
                justify="center"
                nowrap={false}
              >
                <div
                  className="toolbar isDense  isAlignedToTop isJustifiedToCenter"
                >
                  <WithProviderContextComponent>
                    <ToolbarItem>
                      <div
                        className="item"
                      >
                        <ForwardRef(withForwardedRef(WithProviderContextComponent))
                          clickHandler={[Function]}
                          label="Zavřít"
                          priority="flat"
                        >
                          <WithProviderContextComponent
                            clickHandler={[Function]}
                            forwardedRef={null}
                            label="Zavřít"
                            priority="flat"
                          >
                            <Button
                              afterLabel={null}
                              beforeLabel={null}
                              block={false}
                              clickHandler={[Function]}
                              disabled={false}
                              endCorner={null}
                              forwardedRef={null}
                              grouped={false}
                              label="Zavřít"
                              labelVisibility="all"
                              loadingIcon={null}
                              priority="flat"
                              size="medium"
                              startCorner={null}
                              type="button"
                              variant="primary"
                            >
                              <button
                                className="root
        priorityFlat
        sizeMedium
        variantPrimary"
                                disabled={false}
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="label"
                                >
                                  Zavřít
                                </span>
                              </button>
                            </Button>
                          </WithProviderContextComponent>
                        </ForwardRef(withForwardedRef(WithProviderContextComponent))>
                      </div>
                    </ToolbarItem>
                  </WithProviderContextComponent>
                </div>
              </Toolbar>
            </WithProviderContextComponent>
          </div>
        </div>
      </div>
    </Modal>
  </WithProviderContextComponent>
</RUIProvider>
`;

exports[`rendering renders component with provided global props 1`] = `
<RUIProvider
  globalProps={
    Object {
      "Modal": Object {
        "size": "fullscreen",
      },
    }
  }
  translations={
    Object {
      "Alert": Object {
        "close": "Close",
      },
      "Modal": Object {
        "close": "Close",
      },
      "ScrollView": Object {
        "next": "Next",
        "previous": "Previous",
      },
    }
  }
>
  <WithProviderContextComponent
    closeHandler={[Function]}
    title="Modal"
  >
    <Modal
      actions={Array []}
      autoFocus={true}
      closeHandler={[Function]}
      portalId={null}
      position="center"
      scrollView={
        <WithProviderContextComponent
          customEndShadowStyle={
            Object {
              "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            }
          }
          customStartShadowStyle={
            Object {
              "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            }
          }
          shadowSize="16px"
        />
      }
      size="fullscreen"
      title="Modal"
      translations={
        Object {
          "close": "Close",
        }
      }
    >
      <div
        className="overlay"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="root isRootSizeFullscreen isRootPositionCenter"
          onClick={[Function]}
          role="presentation"
        >
          <div
            className="head"
          >
            <h3
              className="headTitle"
            >
              Modal
            </h3>
            <button
              className="close"
              onClick={[Function]}
              title="Close"
              type="button"
            >
              ×
            </button>
          </div>
          <div
            className="body isBodyScrollable"
          >
            <WithProviderContextComponent
              customEndShadowStyle={
                Object {
                  "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                }
              }
              customStartShadowStyle={
                Object {
                  "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                }
              }
              shadowSize="16px"
            >
              <ScrollView
                arrows={false}
                arrowsScrollStep={200}
                autoScroll="off"
                customEndShadowStyle={
                  Object {
                    "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                  }
                }
                customNextArrow={null}
                customPrevArrow={null}
                customStartShadowStyle={
                  Object {
                    "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                  }
                }
                debounce={50}
                direction="vertical"
                scrollbar={true}
                shadowColor={
                  Object {
                    "alpha": 1,
                    "blue": 255,
                    "green": 255,
                    "red": 255,
                  }
                }
                shadowSize="16px"
                translations={
                  Object {
                    "next": "Next",
                    "previous": "Previous",
                  }
                }
              >
                <div
                  className="root    isRootVertical"
                  style={
                    Object {
                      "--rui-local-arrow-color": "inherit",
                      "--rui-local-end-shadow-background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                      "--rui-local-end-shadow-box-shadow": "none",
                      "--rui-local-shadow-height": "16px",
                      "--rui-local-shadow-width": "auto",
                      "--rui-local-start-shadow-background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                      "--rui-local-start-shadow-box-shadow": "none",
                    }
                  }
                >
                  <div
                    className="viewport"
                  >
                    <div
                      className="content"
                    >
                      <div
                        className="content"
                      >
                        Modal content
                      </div>
                    </div>
                  </div>
                  <div
                    aria-hidden={true}
                    className="scrollingShadows"
                  />
                </div>
              </ScrollView>
            </WithProviderContextComponent>
          </div>
          <div
            className="footer"
          >
            <WithProviderContextComponent
              dense={true}
              justify="center"
            >
              <Toolbar
                align="top"
                dense={true}
                justify="center"
                nowrap={false}
              >
                <div
                  className="toolbar isDense  isAlignedToTop isJustifiedToCenter"
                >
                  <WithProviderContextComponent>
                    <ToolbarItem>
                      <div
                        className="item"
                      >
                        <ForwardRef(withForwardedRef(WithProviderContextComponent))
                          clickHandler={[Function]}
                          label="Close"
                          priority="flat"
                        >
                          <WithProviderContextComponent
                            clickHandler={[Function]}
                            forwardedRef={null}
                            label="Close"
                            priority="flat"
                          >
                            <Button
                              afterLabel={null}
                              beforeLabel={null}
                              block={false}
                              clickHandler={[Function]}
                              disabled={false}
                              endCorner={null}
                              forwardedRef={null}
                              grouped={false}
                              label="Close"
                              labelVisibility="all"
                              loadingIcon={null}
                              priority="flat"
                              size="medium"
                              startCorner={null}
                              type="button"
                              variant="primary"
                            >
                              <button
                                className="root
        priorityFlat
        sizeMedium
        variantPrimary"
                                disabled={false}
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="label"
                                >
                                  Close
                                </span>
                              </button>
                            </Button>
                          </WithProviderContextComponent>
                        </ForwardRef(withForwardedRef(WithProviderContextComponent))>
                      </div>
                    </ToolbarItem>
                  </WithProviderContextComponent>
                </div>
              </Toolbar>
            </WithProviderContextComponent>
          </div>
        </div>
      </div>
    </Modal>
  </WithProviderContextComponent>
</RUIProvider>
`;

exports[`rendering renders component with provided translations 1`] = `
<RUIProvider
  globalProps={null}
  translations={
    Object {
      "Modal": Object {
        "close": "Zavřít",
      },
      "ScrollView": Object {
        "next": "Další",
        "previous": "Předchozí",
      },
    }
  }
>
  <WithProviderContextComponent
    closeHandler={[Function]}
    title="Modal"
  >
    <Modal
      actions={Array []}
      autoFocus={true}
      closeHandler={[Function]}
      portalId={null}
      position="center"
      scrollView={
        <WithProviderContextComponent
          customEndShadowStyle={
            Object {
              "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            }
          }
          customStartShadowStyle={
            Object {
              "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            }
          }
          shadowSize="16px"
        />
      }
      size="medium"
      title="Modal"
      translations={
        Object {
          "close": "Zavřít",
        }
      }
    >
      <div
        className="overlay"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="root isRootSizeMedium isRootPositionCenter"
          onClick={[Function]}
          role="presentation"
        >
          <div
            className="head"
          >
            <h3
              className="headTitle"
            >
              Modal
            </h3>
            <button
              className="close"
              onClick={[Function]}
              title="Zavřít"
              type="button"
            >
              ×
            </button>
          </div>
          <div
            className="body isBodyScrollable"
          >
            <WithProviderContextComponent
              customEndShadowStyle={
                Object {
                  "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                }
              }
              customStartShadowStyle={
                Object {
                  "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                }
              }
              shadowSize="16px"
            >
              <ScrollView
                arrows={false}
                arrowsScrollStep={200}
                autoScroll="off"
                customEndShadowStyle={
                  Object {
                    "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                  }
                }
                customNextArrow={null}
                customPrevArrow={null}
                customStartShadowStyle={
                  Object {
                    "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                  }
                }
                debounce={50}
                direction="vertical"
                scrollbar={true}
                shadowColor={
                  Object {
                    "alpha": 1,
                    "blue": 255,
                    "green": 255,
                    "red": 255,
                  }
                }
                shadowSize="16px"
                translations={
                  Object {
                    "next": "Další",
                    "previous": "Předchozí",
                  }
                }
              >
                <div
                  className="root    isRootVertical"
                  style={
                    Object {
                      "--rui-local-arrow-color": "inherit",
                      "--rui-local-end-shadow-background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                      "--rui-local-end-shadow-box-shadow": "none",
                      "--rui-local-shadow-height": "16px",
                      "--rui-local-shadow-width": "auto",
                      "--rui-local-start-shadow-background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                      "--rui-local-start-shadow-box-shadow": "none",
                    }
                  }
                >
                  <div
                    className="viewport"
                  >
                    <div
                      className="content"
                    >
                      <div
                        className="content"
                      >
                        Modal content
                      </div>
                    </div>
                  </div>
                  <div
                    aria-hidden={true}
                    className="scrollingShadows"
                  />
                </div>
              </ScrollView>
            </WithProviderContextComponent>
          </div>
          <div
            className="footer"
          >
            <WithProviderContextComponent
              dense={true}
              justify="center"
            >
              <Toolbar
                align="top"
                dense={true}
                justify="center"
                nowrap={false}
              >
                <div
                  className="toolbar isDense  isAlignedToTop isJustifiedToCenter"
                >
                  <WithProviderContextComponent>
                    <ToolbarItem>
                      <div
                        className="item"
                      >
                        <ForwardRef(withForwardedRef(WithProviderContextComponent))
                          clickHandler={[Function]}
                          label="Zavřít"
                          priority="flat"
                        >
                          <WithProviderContextComponent
                            clickHandler={[Function]}
                            forwardedRef={null}
                            label="Zavřít"
                            priority="flat"
                          >
                            <Button
                              afterLabel={null}
                              beforeLabel={null}
                              block={false}
                              clickHandler={[Function]}
                              disabled={false}
                              endCorner={null}
                              forwardedRef={null}
                              grouped={false}
                              label="Zavřít"
                              labelVisibility="all"
                              loadingIcon={null}
                              priority="flat"
                              size="medium"
                              startCorner={null}
                              type="button"
                              variant="primary"
                            >
                              <button
                                className="root
        priorityFlat
        sizeMedium
        variantPrimary"
                                disabled={false}
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="label"
                                >
                                  Zavřít
                                </span>
                              </button>
                            </Button>
                          </WithProviderContextComponent>
                        </ForwardRef(withForwardedRef(WithProviderContextComponent))>
                      </div>
                    </ToolbarItem>
                  </WithProviderContextComponent>
                </div>
              </Toolbar>
            </WithProviderContextComponent>
          </div>
        </div>
      </div>
    </Modal>
  </WithProviderContextComponent>
</RUIProvider>
`;

exports[`rendering renders component without provider 1`] = `
<WithProviderContextComponent
  closeHandler={[Function]}
  title="Modal"
>
  <Modal
    actions={Array []}
    autoFocus={true}
    closeHandler={[Function]}
    portalId={null}
    position="center"
    scrollView={
      <WithProviderContextComponent
        customEndShadowStyle={
          Object {
            "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
          }
        }
        customStartShadowStyle={
          Object {
            "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
          }
        }
        shadowSize="16px"
      />
    }
    size="medium"
    title="Modal"
    translations={
      Object {
        "close": "Close",
      }
    }
  >
    <div
      className="overlay"
      onClick={[Function]}
      role="presentation"
    >
      <div
        className="root isRootSizeMedium isRootPositionCenter"
        onClick={[Function]}
        role="presentation"
      >
        <div
          className="head"
        >
          <h3
            className="headTitle"
          >
            Modal
          </h3>
          <button
            className="close"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            ×
          </button>
        </div>
        <div
          className="body isBodyScrollable"
        >
          <WithProviderContextComponent
            customEndShadowStyle={
              Object {
                "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
              }
            }
            customStartShadowStyle={
              Object {
                "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
              }
            }
            shadowSize="16px"
          >
            <ScrollView
              arrows={false}
              arrowsScrollStep={200}
              autoScroll="off"
              customEndShadowStyle={
                Object {
                  "background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                }
              }
              customNextArrow={null}
              customPrevArrow={null}
              customStartShadowStyle={
                Object {
                  "background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                }
              }
              debounce={50}
              direction="vertical"
              scrollbar={true}
              shadowColor={
                Object {
                  "alpha": 1,
                  "blue": 255,
                  "green": 255,
                  "red": 255,
                }
              }
              shadowSize="16px"
              translations={
                Object {
                  "next": "Next",
                  "previous": "Previous",
                }
              }
            >
              <div
                className="root    isRootVertical"
                style={
                  Object {
                    "--rui-local-arrow-color": "inherit",
                    "--rui-local-end-shadow-background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                    "--rui-local-end-shadow-box-shadow": "none",
                    "--rui-local-shadow-height": "16px",
                    "--rui-local-shadow-width": "auto",
                    "--rui-local-start-shadow-background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
                    "--rui-local-start-shadow-box-shadow": "none",
                  }
                }
              >
                <div
                  className="viewport"
                >
                  <div
                    className="content"
                  >
                    <div
                      className="content"
                    >
                      Modal content
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  className="scrollingShadows"
                />
              </div>
            </ScrollView>
          </WithProviderContextComponent>
        </div>
        <div
          className="footer"
        >
          <WithProviderContextComponent
            dense={true}
            justify="center"
          >
            <Toolbar
              align="top"
              dense={true}
              justify="center"
              nowrap={false}
            >
              <div
                className="toolbar isDense  isAlignedToTop isJustifiedToCenter"
              >
                <WithProviderContextComponent>
                  <ToolbarItem>
                    <div
                      className="item"
                    >
                      <ForwardRef(withForwardedRef(WithProviderContextComponent))
                        clickHandler={[Function]}
                        label="Close"
                        priority="flat"
                      >
                        <WithProviderContextComponent
                          clickHandler={[Function]}
                          forwardedRef={null}
                          label="Close"
                          priority="flat"
                        >
                          <Button
                            afterLabel={null}
                            beforeLabel={null}
                            block={false}
                            clickHandler={[Function]}
                            disabled={false}
                            endCorner={null}
                            forwardedRef={null}
                            grouped={false}
                            label="Close"
                            labelVisibility="all"
                            loadingIcon={null}
                            priority="flat"
                            size="medium"
                            startCorner={null}
                            type="button"
                            variant="primary"
                          >
                            <button
                              className="root
        priorityFlat
        sizeMedium
        variantPrimary"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="label"
                              >
                                Close
                              </span>
                            </button>
                          </Button>
                        </WithProviderContextComponent>
                      </ForwardRef(withForwardedRef(WithProviderContextComponent))>
                    </div>
                  </ToolbarItem>
                </WithProviderContextComponent>
              </div>
            </Toolbar>
          </WithProviderContextComponent>
        </div>
      </div>
    </div>
  </Modal>
</WithProviderContextComponent>
`;
